attempt to fix overflowing again

--- a/src/components/About.module.css
+++ b/src/components/About.module.css
@@ -89,7 +89,7 @@
         padding-left: 1em;
     }
     .img {
-        padding-bottom: .5em;
+        padding-block: 1em;
     }
 }
 
